test: Добавлены функции на удаление и редактирование книг, а также  тесты на удаление и негативный тест

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,19 +8,23 @@
 <body>
     <h1>📚 Book Tracker</h1>
     <p>Отслеживайте свои прочитанные книги!</p>
+
     {% if books %}
         <ul>
         {% for book in books %}
             <li>
                 "{{ book.title }}" — {{ book.author }} ({{ book.genre }}), прочитано: {{ book.date_read }}
+                <br><br>
+                <a href="{{ url_for('edit_book', id=book.id) }}">✏️ Редактировать</a> |
+                <a href="{{ url_for('delete_book', id=book.id) }}">🗑️ Удалить</a>
             </li>
         {% endfor %}
         </ul>
     {% else %}
         <p>Пока нет ни одной книги.</p>
     {% endif %}
-    
-    <p><a href="{{ url_for('add_book') }}">➕ Добавить новую книгу</a></p>    
+
+    <p><a href="{{ url_for('add_book') }}">➕ Добавить новую книгу</a></p>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
