--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -22,25 +22,25 @@
           {% endif %}
         {% endwith %}
                 
-        <form method="post" class="book-form">
+        <form method="post" class="book-form" novalidate>
             <div class="form-group">
                 <label for="title">Название книги</label>
-                <input type="text" id="title" name="title" placeholder="Введите название книги" required>
+                <input type="text" id="title" name="title" value="{{ request.form.title }}" placeholder="Введите название книги" required>
             </div>
             
             <div class="form-group">
                 <label for="author">Автор</label>
-                <input type="text" id="author" name="author" placeholder="Введите автора" required>
+                <input type="text" id="author" name="author" value="{{ request.form.author }}" placeholder="Введите автора" required>
             </div>
             
             <div class="form-group">
                 <label for="genre">Жанр</label>
-                <input type="text" id="genre" name="genre" placeholder="Введите жанр" required>
+                <input type="text" id="genre" name="genre" value="{{ request.form.genre }}" placeholder="Введите жанр" required>
             </div>
             
             <div class="form-group">
                 <label for="date_read">Дата прочтения</label>
-                <input type="date" id="date_read" name="date_read" required>
+                <input type="date" id="date_read" name="date_read" value="{{ request.form.date_read }}" required>
             </div>
             
             <button type="submit" class="btn btn-primary">
